Drag and Drop grip icon added to every sections and fields.

--- a/NgImFormBootstrap/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImFormBootstrap/src/app/modules/form-builder/form-builder.component.html
@@ -27,11 +27,18 @@
 
     <div class="card-body">
       <ng-container *ngFor="let section of horizontalForm.sections; let sectionIndex = index">
-        <div class="mb-2">
+        <div class="mb-4">
           <div class="card bg-body-secondary section" draggable="true" (dragstart)="onSectionDragStart(sectionIndex)"
             (dragover)="onSectionDragOver($event, sectionIndex)" (drop)="onSectionDrop($event, sectionIndex)"
             (dragend)="onSectionDragEnd()" [class.dragging]="draggedSectionIndex === sectionIndex"
             [class.replace]="replaceSectionIndex === sectionIndex">
+            <div class="top-grip-section">
+              <div class="m-2">
+                <div class="d-flex justify-content-center">
+                  <i class="fas fa-grip"></i>
+                </div>
+              </div>
+            </div>
             <div class="card-header">
               <div class="d-flex justify-content-between">
                 <div>
@@ -60,6 +67,13 @@
                       replaceField?.sectionIndex === sectionIndex &&
                       replaceField?.fieldIndex === fieldIndex
                     ">
+                    <div class="top-grip-section">
+                      <div class="m-2">
+                        <div class="d-flex justify-content-center">
+                          <i class="fas fa-grip"></i>
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
@@ -130,6 +144,13 @@
                       replaceField?.sectionIndex === sectionIndex &&
                       replaceField?.fieldIndex === fieldIndex
                     ">
+                    <div class="top-grip-section">
+                      <div class="m-2">
+                        <div class="d-flex justify-content-center">
+                          <i class="fas fa-grip"></i>
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
@@ -201,6 +222,13 @@
                       replaceField?.sectionIndex === sectionIndex &&
                       replaceField?.fieldIndex === fieldIndex
                     ">
+                    <div class="top-grip-section">
+                      <div class="m-2">
+                        <div class="d-flex justify-content-center">
+                          <i class="fas fa-grip"></i>
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
@@ -270,6 +298,13 @@
                       replaceField?.sectionIndex === sectionIndex &&
                       replaceField?.fieldIndex === fieldIndex
                     ">
+                    <div class="top-grip-section">
+                      <div class="m-2">
+                        <div class="d-flex justify-content-center">
+                          <i class="fas fa-grip"></i>
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
@@ -346,6 +381,13 @@
                       replaceField?.sectionIndex === sectionIndex &&
                       replaceField?.fieldIndex === fieldIndex
                     ">
+                    <div class="top-grip-section">
+                      <div class="m-2">
+                        <div class="d-flex justify-content-center">
+                          <i class="fas fa-grip"></i>
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
@@ -416,6 +458,13 @@
                       replaceField?.sectionIndex === sectionIndex &&
                       replaceField?.fieldIndex === fieldIndex
                     ">
+                    <div class="top-grip-section">
+                      <div class="m-2">
+                        <div class="d-flex justify-content-center">
+                          <i class="fas fa-grip"></i>
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
@@ -461,6 +510,13 @@
                       replaceField?.sectionIndex === sectionIndex &&
                       replaceField?.fieldIndex === fieldIndex
                     ">
+                    <div class="top-grip-section">
+                      <div class="m-2">
+                        <div class="d-flex justify-content-center">
+                          <i class="fas fa-grip"></i>
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
@@ -515,6 +571,13 @@
                       replaceField?.sectionIndex === sectionIndex &&
                       replaceField?.fieldIndex === fieldIndex
                     ">
+                    <div class="top-grip-section">
+                      <div class="m-2">
+                        <div class="d-flex justify-content-center">
+                          <i class="fas fa-grip"></i>
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
