--- a/NgImFormBootstrap/src/app/modules/form-preview/form-preview.component.html
+++ b/NgImFormBootstrap/src/app/modules/form-preview/form-preview.component.html
@@ -1,5 +1,11 @@
 <div class="container container-fluid">
     <div class="m-3">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+    <div class="m-3">
         <form [formGroup]="form" (ngSubmit)="submit()">
             <ng-container *ngFor="let section of sections">
                 <div class="mb-3">
