Textbox name is unique checked in Textbox Properties component.

--- a/NgImFormBootstrap/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImFormBootstrap/src/app/modules/form-builder/form-builder.component.html
@@ -646,7 +646,7 @@
   [sectionProperties]="selectedForSectionPropertiesUpdate" (hidePanelEvent)="hideSectionPropertiesSidePanel()"
   (saveChangesEvent)="saveSectionProperties($event)"></app-section-properties-sidepanel>
 
-<app-textbox-properties-sidepanel *ngIf="isTextBoxPropertiesSidePanelOpen"
+<app-textbox-properties-sidepanel *ngIf="isTextBoxPropertiesSidePanelOpen" [horizontalForm]="horizontalForm"
   [textboxProperties]="selectedForTextboxPropertiesUpdate" (hidePanelEvent)="hideTextBoxPropertiesSidePanel()"
   (saveChangesEvent)="saveTextboxProperties($event)"></app-textbox-properties-sidepanel>
 
