--- a/NgImFormBootstrap/projects/ng-im-form-bootstrap/src/lib/modules/form-builder/form-builder.component.scss
+++ b/NgImFormBootstrap/projects/ng-im-form-bootstrap/src/lib/modules/form-builder/form-builder.component.scss
@@ -2,6 +2,27 @@
   user-select: none;
 }
 
+/* You can add global styles to this file, and also import other style files */
+.details-sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 440px;
+  height: 100%;
+  background-color: white;
+}
+
+.details-section {
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.sidebar-card-body {
+  padding-top: 10px !important;
+}
+
 .section:hover {
   transition: box-shadow 0.2s ease, transform 0.2s ease;
   box-shadow: 0 4px 12px #cfe2ff;
