Selector changed 'app-form-builder' to 'ng-im-form-builder' and 'app-form-preview' to 'ng-im-form-preview'

--- a/NgImFormBootstrap/src/app/pages/form-builder-page/form-builder-page.component.html
+++ b/NgImFormBootstrap/src/app/pages/form-builder-page/form-builder-page.component.html
@@ -3,4 +3,4 @@
     <a class="btn btn-success ms-1" [routerLink]="['/form-preview']">Go to Preview</a>
 </div>
 <hr>
-<app-form-builder [preset]="builtForm" (publishFormEvent)="storeNewForm($event)"></app-form-builder>
+<ng-im-form-builder [preset]="builtForm" (publishFormEvent)="storeNewForm($event)"></ng-im-form-builder>
