Event raised from different stages on submit.
Submit start, processing, success and error.

--- a/NgImFormBootstrap/src/app/pages/form-preview-page/form-preview-page.component.html
+++ b/NgImFormBootstrap/src/app/pages/form-preview-page/form-preview-page.component.html
@@ -3,4 +3,10 @@
 </div>
 <hr />
 
-<ng-im-form-preview [preset]="form"></ng-im-form-preview>
+<ng-im-form-preview
+  [preset]="form"
+  (onSubmitEvent)="onSubmit($event)"
+  (onSubmitProcessing)="onSubmitProcessing($event)"
+  (onSubmitSuccess)="onSubmitSuccess($event)"
+  (onSubmitError)="onSubmitError($event)"
+></ng-im-form-preview>
