--- a/NgImFormBootstrap/projects/ng-im-form-bootstrap/src/lib/modules/form-builder/field-selection-sidepanel/field-selection-sidepanel.component.html
+++ b/NgImFormBootstrap/projects/ng-im-form-bootstrap/src/lib/modules/form-builder/field-selection-sidepanel/field-selection-sidepanel.component.html
@@ -5,7 +5,7 @@
         <h4 class="modal-title">Select Field</h4>
       </span>
       <span>
-        <button type="button" class="btn btn-outline-danger btn-sm" (click)="hide()">
+        <button type="button" class="btn btn-light btn-sm" (click)="hide()">
           <i class="fas fa-times"></i>
         </button>
       </span>
@@ -25,7 +25,7 @@
     <hr>
 
     <div class="d-flex justify-content-end">
-      <button class="btn btn-primary" (click)="add()"><i class="fas fa-plus-circle"></i> Add</button>
+      <button class="btn btn-success" (click)="add()"><i class="fas fa-plus-circle"></i> Add Selected Field</button>
     </div>
   </div>
 </aside>
