--- a/NgImFormBootstrap/projects/ng-im-form-bootstrap/src/lib/modules/form-builder/section-properties-sidepanel/section-properties-sidepanel.component.html
+++ b/NgImFormBootstrap/projects/ng-im-form-bootstrap/src/lib/modules/form-builder/section-properties-sidepanel/section-properties-sidepanel.component.html
@@ -5,7 +5,7 @@
         <h4 class="modal-title">Section Properties</h4>
       </span>
       <span>
-        <button type="button" class="btn btn-outline-danger btn-sm" (click)="hide()">
+        <button type="button" class="btn btn-light btn-sm" (click)="hide()">
           <i class="fas fa-times"></i>
         </button>
       </span>
@@ -51,7 +51,7 @@
 
         <div class="form-group">
           <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save Changes</button>
+            <button type="submit" class="btn btn-success"><i class="fas fa-check-circle"></i> Save Changes</button>
           </div>
         </div>
       </div>
